hphp/test/slow/object/const/non-const-from-trait.php.expectf
Fatal error: trait's non-const declaration of property 'p' is incompatible with a const class in %s/non-const-from-trait.php on line 4
